objects/FLODocs__Export_Object_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Attachment_Url__c</fullName>
        <label>Attachment Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Request_Url__c</fullName>
        <description>field to store the url to create a change request from the Environment Compare</description>
        <label>Change Request Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FLODocs__Export_Url__c</fullName>
        <description>Export_Url</description>
        <label>Export Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FLODocs__Heap_Size_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Heap Size Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Result__c</fullName>
        <label>Result</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Warning_Message__c</fullName>
        <label>Warning Message</label>
        <type>TextArea</type>
    </fields>
    <label>Export Attachment</label>
    <listViews>
        <fullName>FLODocs__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FLODocs__Attachment_URLs</fullName>
        <columns>NAME</columns>
        <columns>FLODocs__Attachment_Url__c</columns>
        <columns>FLODocs__Warning_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Attachment URLs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Export Object Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Export Attachments</pluralLabel>
    <recordTypes>
        <fullName>FLODocs__Env_Compare</fullName>
        <active>true</active>
        <description>record type to identify objects coming from environment compare</description>
        <label>Env Compare</label>
    </recordTypes>
    <recordTypes>
        <fullName>FLODocs__Export_object</fullName>
        <active>true</active>
        <description>record type to identify the objects that were generated from the export object</description>
        <label>Export object</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>